--- a/1.0.0/demo/index.html
+++ b/1.0.0/demo/index.html
@@ -16,71 +16,6 @@ body {
     display: inline-block;
     margin-top: 165px;
 }
-.pagination-page {
-float: left;
-line-height: 40px;
-color: #999;
-text-align: center;
-}
-div.page-siblings {
-width: auto;
-height: 39px;
-border: 2px solid #fff;
-}
-.pagination-page div.page-wrap {
-float: left;
-display: inline-block;
-position: relative;
-}
-.pagination-page .num {
-border: 2px solid #fff;
-margin-left: -2px;
-width: 37px;
-height: 39px;
-position: absolute;
-bottom: 0;
-left: 0;
-overflow: hidden;
-}
-.pagination-page {
-line-height: 40px;
-color: #fff;
-}
-.pagination-page .page-cur{
-position: relative;
-z-index: 2;
-background: #FFF;
-
-font-size: 18px;
-color: #d193b7;
-display: block;
-width: 38px;
-height: 41px;
-line-height: 41px;
-overflow: hidden;
-}
-.pagination-page a {
-padding: 11px 15px;
-font-size: 18px;
-line-height: 40px;
-position: relative;
-z-index: 1;
-color: #fff;
-text-decoration: none;
-}
-.pagination .page-prev {
-margin-right: 5px;
-border: 2px solid #fff;
-cursor: pointer;
-}
-.page-split {
-float: left;
-position: relative;
-z-index: 9999;
-background: #D193B7;
-width: 37px;
-height: 43px;
-}
 </style>
 </head>
 <body>
@@ -96,7 +31,7 @@ height: 43px;
                 <div class="page-wrap item num">
                     <a href="" class="page">1</a>
                 </div>
-                <div class="page-wrap item num">
+                <div class="page-wrap item item-sel num">
                     <span class="page-cur">2</span>
                 </div>
                 <div class="page-wrap item num">
@@ -118,6 +53,7 @@ height: 43px;
 
 <script>
     var S = KISSY;
+    S.Config.debug = true
     if (S.Config.debug) {
         var debugPath = "http://localhost:5555/";
         S.config({
@@ -132,8 +68,12 @@ height: 43px;
         });
     }
 
-    S.use('kg/effect-paginations/1.0.0/index', function (S, EffectPaginations) {
-        new EffectPaginations();
+    S.use('kg/effect-paginations/1.0.0/index,kg/effect-paginations/1.0.0/index.css', function (S, EffectPaginations) {
+        new EffectPaginations({
+            boxHook: '.pagination-page',
+            childHook: '.item',
+            curChildHook: '.item-sel'
+        });
     })
 
 </script>
