--- a/1.0.0/demo/index.html
+++ b/1.0.0/demo/index.html
@@ -69,11 +69,20 @@ body {
     }
 
     S.use('kg/effect-paginations/1.0.0/index,kg/effect-paginations/1.0.0/index.css', function (S, EffectPaginations) {
-        new EffectPaginations({
+        
+        var effectPaginations = new EffectPaginations({
             boxHook: '.pagination-page',
             childHook: '.item',
             curChildHook: '.item-sel'
         });
+
+        effectPaginations.on('start',function(){
+            console.log('start');
+        });
+        effectPaginations.on('end',function(){
+            console.log('end');
+        });
+
     })
 
 </script>
