sync daily version 1.0.0

--- a/1.0.0/demo/index.html
+++ b/1.0.0/demo/index.html
@@ -82,6 +82,9 @@ body {
         effectPaginations.on('end',function(){
             console.log('end');
         });
+        effectPaginations.on('mouseleave',function(){
+            console.log('mouseleave');
+        });
 
     })
 
